--- a/yiuhei/src/App.css
+++ b/yiuhei/src/App.css
@@ -3,3 +3,24 @@
   display: inline-flex;
   width: 100%;
 }
+
+.divider{
+  width: 100%;
+  height: 1px;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+body {
+  font-family: "IM Fell English";
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1em;
+  line-height: 1.5em;
+  letter-spacing: 2.5px; 
+  color: rgba(0,0,0,.5);
+}
+
+a {
+  text-decoration: none;
+  color: rgba(0,0,0,.5);
+}
