--- a/yiuhei/src/ContentPages/Work.css
+++ b/yiuhei/src/ContentPages/Work.css
@@ -16,15 +16,19 @@
 .work-list{
   max-width: 400px;
   width: 100%;
-  padding: 2em;
+  padding: 1em;
 }
 
 .work-item{
   margin: 2em 0;
-  padding-top: 100%;
-  background-color: blue;
-  flex: 1;
   position: relative;
+}
+
+.work-item .nav-tile{
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+  opacity: 50%
 }
 
 .work-item .name{
@@ -32,6 +36,9 @@
   left: 5%;
   top: 50%;
   transform: translateY(-50%);
+  color: black;
+  font-size: 0.8em;
+  letter-spacing: 0;
 }
 
 .work-list .title-wrapper {
