Fixed issue with clickable area for website logo being much wider then intended. replaced placeholder image for website logo with image

--- a/yiuhei/src/Logo.css
+++ b/yiuhei/src/Logo.css
@@ -1,10 +1,11 @@
 #logo-wrapper{
-  padding: 50px 0px 0px 50px;
-  flex: 1;
-}
-
-#placeholder{
+  padding-top: 50px;
+  padding-left: 50px;
   height: 110px;
   width: 91.25px;
-  background-color: blueviolet;
+}
+
+#logo{
+  height: 100%;
+  width: 100%;
 }
