--- a/yiuhei/src/Menu.css
+++ b/yiuhei/src/Menu.css
@@ -6,7 +6,7 @@
 .menu-item{
   font-family: Arial,verdana,sans-serif;
   margin-left: 20px;
-  font-family: Crimson Text;
+  font-family: "Crimson Text";
   font-size: 1em;
   font-weight: 400;
   font-style: normal;
