Fixed issue with home cover image being larger then view width when view width was smaller then image width

--- a/yiuhei/src/ContentPages/Home.css
+++ b/yiuhei/src/ContentPages/Home.css
@@ -10,7 +10,8 @@
 
 
 #home-cover-wrapper{
-  width: 480px;
+  width: 100%;
+  max-width: 480px;
   height: 500px;
   margin: 0 1em;
   flex-shrink: 0;
